cmake_minimum_required(VERSION 3.28)
project(C__)

set(CMAKE_CXX_STANDARD 20)

#add_executable(C__ main.cpp
#        Pointers.cpp
#        References.cpp)


add_executable(C__
#        Compiling/Compiling.cpp
#        Compiling/Compiling.h
        HowCompilerWorks/main.cpp
        HowCompilerWorks/Math.cpp
)